SET(NIUBI_SETUP_TARGET_NAME osgdb_drc)

SET(HEADER_PATH ${PROJECT_SOURCE_DIR}/include/${NIUBI_SETUP_TARGET_NAME})
INCLUDE_DIRECTORIES(AFTER ${OSG_INCLUDE_DIR})

# INCLUDE_DIRECTORIES(AFTER ${CMAKE_SOURCE_DIR}/3rdparty/install/include)
INCLUDE_DIRECTORIES(AFTER ${DRACO_INCLUDE_DIR})

SET(NIUBI_SETUP_HEADERS
)
SET(NIUBI_SETUP_SOURCES
    GeometryUtil.h
    ReaderWriterDRC.cpp
)

ADD_DEFINITIONS( -DDRACO_STANDARD_EDGEBREAKER_SUPPORTED
            -DDRACO_PREDICTIVE_EDGEBREAKER_SUPPORTED )

NIUBI_SETUP_LIBRARY()
TARGET_LINK_LIBRARIES( ${NIUBI_SETUP_TARGET_NAME}
    # ${EXTERNAL_LIBRARIES}
    debug ${OPENTHREADS_LIBRARY_DEBUG} optimized ${OPENTHREADS_LIBRARY}
    debug ${OSG_LIBRARY_DEBUG} optimized ${OSG_LIBRARY}
    debug ${OSGDB_LIBRARY_DEBUG} optimized ${OSGDB_LIBRARY}
    debug ${OSGUTIL_LIBRARY_DEBUG} optimized ${OSGUTIL_LIBRARY}
    debug ${OSGGA_LIBRARY_DEBUG} optimized ${OSGGA_LIBRARY}
    debug ${OSGVIEWER_LIBRARY_DEBUG} optimized ${OSGVIEWER_LIBRARY}
    # debug ${OSGTEXT_LIBRARY_DEBUG} optimized ${OSGTEXT_LIBRARY}
    # debug ${PHYSFS_STATIC_LIBRARY_DEBUG} optimized ${PHYSFS_STATIC_LIBRARY}
    # debug ${ZLIB_LIBRARY_DEBUG} optimized ${ZLIB_LIBRARY}
    
    debug ${DRACO_LIBRARY_DEBUG} optimized ${DRACO_LIBRARY}
    )
# NIUBI_SETUP_INSTALL()
# NIUBI_SETUP_INSTALL_INCLUDE()
# NIUBI_SETUP_DOCUMENT()
